[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "clicktool"
version = "0.0.1760910064"
description = "Common functions for @click"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "click",
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/clicktool"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
clicktool = [
    "py.typed",
]
