[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "clicktool"
version = "0.0.1761028748"
description = "Common functions for @click"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "click",
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/clicktool"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
clicktool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = []
dependencies-git = ["click"]
index-urls = ["jakeogh.github.io", "pip-index"]
