[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "clicktool"
version = "1!0.0.1761810011"
description = "Common functions for @click"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/clicktool"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
clicktool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = ["click", "globalverbose>=0.0.1761031290"]
dependencies-git = ["click", "globalverbose @ git+https://git@github.com/jakeogh/globalverbose",]
index-urls = ["jakeogh.github.io", "pip-index"]
